--- a/tesiref.bib
+++ b/tesiref.bib
@@ -158,4 +158,10 @@
 	title="https://www.digi.com/resources/documentation/Digidocs/90002002/Content/Reference/r_zb_stack.htm",
 	howpublished="\url{https://www.digi.com/resources/documentation/Digidocs/90002002/Content/Reference/r_zb_stack.htm}"}
 
+@misc{maxseczigbeenet,
+	title="Maximizing Security in ZigBee Networks",
+	howpublished="\url{https://www.nxp.com/docs/en/supporting-information/MAXSECZBNETART.pdf}",
+	author="nxp",
+	year={2017}}
+
 \end{thebibliography}
