--- a/tesi1.tex
+++ b/tesi1.tex
@@ -766,7 +766,7 @@ There exist many different SDP structures, as we will detail in the following, b
 Figure \ref{fig:sdpstructure} shows an example of a possible SDP structure.
 
 \begin{figure}[H]
-\includegraphics[width=10cm,height=10cm,keepaspectratio]{sdp_structure}
+\includegraphics[width=10cm,height=10cm,keepaspectratio]{sdp_structure1}
 \centering
 \caption{Example of  SDP structure}
 \label{fig:sdpstructure}
