--- a/tesiref.bib
+++ b/tesiref.bib
@@ -1,9 +1,7 @@
-\begin{thebibliography}{}
 
 @misc{kevinashton,
-	title="https://en.wikipedia.org/wiki/Kevin_Ashton/",
-	howpublished="\url{https://en.wikipedia.org/wiki/KevinAshton/}"
-}
+	title={Kevin Ashton},
+	howpublished={"\url{https://en.wikipedia.org/wiki/KevinAshton/}"}}
 
 @misc{toys,
 	title={CloudPets stuffed toys leak details of half a million users },
@@ -20,75 +18,74 @@
 }
 
 @misc{cirruslink,
-	title="https://www.cirrus-link.com/",
+	title={Cirrus Link},
 	howpublished="\url{https://www.cirrus-link.com/}"}
 
 @misc{ibm,
-	title="https://www.ibm.com/",
+	title={IBM},
 	howpublished="\url{https://www.ibm.com/}"
 }
 
 @misc{shodan,
-	title="{https://www.shodan.io/}",
+	title={Shodan},
 	howpublished="\url{https://www.shodan.io/}"
 }
 
 @misc{mqttslideshare,
-	title="Message queuing telemetry transport(mqtt) and part and summarizing",
+	title={Message queuing telemetry transport(mqtt) and part and summarizing},
 	author="Khamdamboy Urunov",
 	year={2016},
 	howpublished="\url{https://www.slideshare.net/Hamdamboy/message-queuing-telemetry-transport-mqttand-part-3-and-summarizing}"
 }
 
 @misc{mqttrfc,
-	title="MQTT RFC",
-	author="MQTT.org",
+	title={MQTT RFC},
 	year={2014},
 	howpublished="\url{http://docs.oasis-open.org/mqtt/mqtt/v3.1.1/os/mqtt-v3.1.1-os.pdf}"
 }
 
 @misc{hivemq,
-	title="MQTT Security fundamentals",
+	title={MQTT Security fundamentals},
 	author="dc-square GmbH",
 	howpublished="\url{https://www.hivemq.com/blog/mqtt-security-fundamentals-authentication-username-password}"
 }
 
 @misc{morphuslab,
-	title="Hacking the IoT with MQTT",
+	title={Hacking the IoT with MQTT},
 	author="Victor Pasknel",
 	year={2017},
 	howpublished="\url{https://morphuslabs.com/hacking-the-iot-with-mqtt-8edaf0d07b9b}"
 }
 
 @misc{sslvulns,
-	title="https://www.digicert.com/cert-inspector-vulnerabilities.htm#certificate_vulnerabilities",
+	title={Digicert},
 	howpublished="\url{https://www.digicert.com/cert-inspector-vulnerabilities.htm#certificate_vulnerabilities}"
 }
 
 @misc{mitmwiki,
-	title="https://en.wikipedia.org/wiki/Man-in-the-middle_attack",
+	title={Man In The Middle},
 	howpublished="\url{https://en.wikipedia.org/wiki/Man-in-the-middle_attack}"
 }
 
 @misc{oauthwiki,
-	title="https://en.wikipedia.org/wiki/OAuth",
+	title={OAuth},
 	howpublished="\url{https://en.wikipedia.org/wiki/OAuth}"
 }
 
 @misc{ocspwiki,
-	title="https://en.wikipedia.org/wiki/Online_Certificate_Status_Protocol",
+	title={OCSP},
 	howpublished="https://en.wikipedia.org/wiki/Online_Certificate_Status_Protocol"
 }
 
 @misc{mqttonlywithsdp,
-	title="Is MQTT Secure for the IoT? Only with an SDP!",
+	title={Is MQTT Secure for the IoT? Only with an SDP!},
 	author="Juanita Koilpillai",
 	year={2016},
 	howpublished="\url{http://www.waverleylabs.com/is-mqtt-secure-for-the-iot-only-with-an-sdp/}"
 }
 
 @misc{portknockandspaanalysis,
-	title="An Analysis of Port Knocking and Single Packet Authorization",
+	title={An Analysis of Port Knocking and Single Packet Authorization},
 	author="Sebastien Jeanquier",
 	year={2006},
 	howpublished="\url{https://www.securitygeneration.com/wp-content/uploads/2010/05/An-Analysis-of-Port-Knocking-and-Single-Packet-Authorization-Sebastien-Jeanquier.pdf}"
@@ -102,66 +99,65 @@
 }
 
 @misc{protectnetwithsdp,
-	title="Protegger la rete con il Software Defined Perimeter",
+	title={Proteggere la rete con il Software Defined Perimeter},
 	author="01net.",
 	year={2018},
 	howpublished="\url{https://www.01net.it/proteggere-rete-software-defined-perimeter/}"
 }
 
 @misc{zigbeewirelesstechnology,
-	title="ZigBee Wireless Technology Architecture and Applications",
+	title={ZigBee Wireless Technology Architecture and Applications},
 	author="Tarun Agarwal",
 	howpublished="\url{https://www.elprocus.com/what-is-zigbee-technology-architecture-and-its-applications/}"}
 
 @misc{secanalysisofzigbee,
-	title="Security Analysis of Zigbee",
+	title={Security Analysis of Zigbee},
 	author="Xueqi Fan, Fransisca Susan, William Long, Shangyan Li",
 	year={2017}
 }
 
 @misc{onewaycompressionfunc,
-	title="https://en.wikipedia.org/wiki/One-way_compression_function",
+	title={One way compression function},
 	howpublished="\url{https://en.wikipedia.org/wiki/One-way_compression_function}"
 }
 
 @misc{security802154,
-	title="Security in 802.15.4 and ZigBee networks",
+	title={Security in 802.15.4 and ZigBee networks},
 	author="David Gascón",
 	year={2009},
 	howpublished="\url{http://www.libelium.com/security-802-15-4-zigbee/}"
 }
 
 @misc{aesccmwiki,
-	title="CCM mode",
+	title={CCM mode},
 	howpublished="\url{https://en.wikipedia.org/wiki/CCM_mode}"	
 }
 
 @misc{zigbeesecbasics2,
-	title="Zigbee Security: Basics",
+	title={Zigbee Security: Basics, part 2},
 	author="Vishruta Rudresh",
 	year={2017},
 	howpublished="\url{https://research.kudelskisecurity.com/2017/11/21/zigbee-security-basics-part-2/}"
 }
 
 @misc{zigbeesecbasics3,
-	title="Zigbee Security: Basics",
+	title={Zigbee Security: Basics, part 1},
 	author="Vishruta Rudresh",
 	year={2017},
 	howpublished="\url{https://research.kudelskisecurity.com/2017/11/21/zigbee-security-basics-part-3/}"
 }
 
 @misc{zigbeespec,
-	title="ZigBee Specification",
+	title={ZigBee Specification},
 	howpublished="\url{http://www.zigbee.org/wp-content/uploads/2014/11/docs-05-3474-20-0csg-zigbee-specification.pdf}"}
 
 @misc{digi,
-	title="https://www.digi.com/resources/documentation/Digidocs/90002002/Content/Reference/r_zb_stack.htm",
+	title={ZigBee Stack Layers},
 	howpublished="\url{https://www.digi.com/resources/documentation/Digidocs/90002002/Content/Reference/r_zb_stack.htm}"}
 
 @misc{maxseczigbeenet,
-	title="Maximizing Security in ZigBee Networks",
+	title={Maximizing Security in ZigBee Networks},
 	howpublished="\url{https://www.nxp.com/docs/en/supporting-information/MAXSECZBNETART.pdf}",
 	author="nxp",
 	year={2017}}
 
-\end{thebibliography}
